Roman numerals for bible books

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1561,7 +1561,7 @@ Hölderlin, Friedrich:
     - start: 273
     - start: 276
   type: p
-I Cor. 11. 7:
+Ⅰ Cor. 11. 7:
   author: Paulus
   metadata:
     urn: urn:cts:greekLit:tlg0031.tlg007:11.7
@@ -1569,7 +1569,7 @@ I Cor. 11. 7:
     GA 63:
     - start: 22
   type: w
-II Cor. 3. 18:
+Ⅱ Cor. 3. 18:	
   author: Paulus
   metadata:
     urn: urn:cts:greekLit:tlg0031.tlg008:3.18
