--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -321,11 +321,15 @@ Benehmen:
   references:
     GA 29/30:
     - start: 450
+    - end: 349
+      start: 344
 Benommenheit:
   references:
     GA 29/30:
     - start: 443
     - start: 489
+    - start: 347
+      suffix: ff
 Benommenheit des Tieres:
   parent: Benommenheit
   references:
@@ -775,13 +779,22 @@ Eigentlichkeit:
     GA 29/30:
     - end: 427
       start: 426
+Eigentümlichkeit:
+  references:
+    GA 29/30:
+    - start: 339
+      suffix: f
+    - start: 331
+    - start: 325
+      suffix: f
+      type: r
+    - end: 343
+      start: 341
+    - start: 347
 Einfühlung:
   references:
     GA 29/30:
     - start: 298
-Einfühulung:
-  references:
-    GA 29/30:
     - start: 304
 Elemente:
   references:
@@ -1592,6 +1605,8 @@ Husserl, Edmund:
   references:
     GA 1:
     - start: 56
+    GA 29/30:
+    - start: 338
   type: p
 Hölderlin, Friedrich:
   metadata:
@@ -1848,6 +1863,7 @@ Leben:
     - start: 311
     - start: 313
     - start: 317
+    - start: 329
     SZ:
     - start: 246
       suffix: f
@@ -2363,6 +2379,12 @@ Organ:
     - start: 312
     - end: 318
       start: 316
+    - end: 321
+      start: 319
+    - end: 333
+      start: 323
+    - start: 335
+      suffix: ff
 Organismisch:
   references:
     GA 29/30:
@@ -2549,6 +2571,9 @@ Physische:
       start: 18
 Phänomenologie:
   references:
+    GA 29/30:
+    - start: 338
+      suffix: f
     GA 63:
     - start: 110
 Pindar:
@@ -2688,6 +2713,7 @@ Roux, Wilhelm:
     GA 29/30:
     - start: 312
     - start: 314
+    - start: 341
   type: p
 Ruhm:
   references:
@@ -2935,14 +2961,17 @@ Selbigkeit der Philosophie:
   references:
     GA 29/30:
     - start: 259
+Selbstheit:
+  references:
+    GA 29/30:
+    - start: 340
+  related:
+  - Eigentümlichkeit
 Sich versetzen:
   references:
     GA 29/30:
     - end: 309
       start: 307
-Sichversetzen:
-  references:
-    GA 29/30:
     - end: 304
       start: 295
   related:
@@ -3037,6 +3066,7 @@ Sprache:
     - start: 442
       suffix: f
     - start: 298
+    - start: 346
     WD:
     - start: 274
 Sprachgeist:
@@ -3130,6 +3160,8 @@ Symbol:
     GA 29/30:
     - end: 448
       start: 444
+  related:
+  - σύμβολον
 System:
   references:
     GA 29/30:
@@ -3207,6 +3239,13 @@ Tier:
       start: 307
     - end: 317
       start: 316
+    - end: 329
+      start: 327
+    - start: 336
+      suffix: f
+    - start: 340
+    - end: 349
+      start: 343
     WD:
     - start: 277
     - start: 278
@@ -3277,6 +3316,15 @@ Trieb:
       start: 7
     - start: 11
     - start: 33
+    - start: 330
+      suffix: f
+      type: r
+    - start: 333
+      suffix: ff
+    - start: 339
+      suffix: f
+    - start: 346
+      suffix: f
 Umwelt:
   references:
     GA 18:
@@ -3429,6 +3477,9 @@ Vitalismus:
     GA 29/30:
     - start: 278
     - start: 318
+    - start: 325
+      suffix: f
+      type: r
   related:
   - Mechanizismus
   - Neovitalismus
@@ -3578,13 +3629,9 @@ Weltarmut:
     GA 29/30:
     - end: 310
       start: 307
+    - start: 331
   related:
   - Weltbildung
-Weltarmut des Tieres:
-  references:
-    GA 29/30:
-    - start: 309
-      suffix: f
 Weltbildung:
   parent: Welt
   references:
@@ -3665,6 +3712,13 @@ Wesen des Tieres:
     GA 29/30:
     - start: 309
       suffix: f
+    - start: 331
+    - start: 343
+    - start: 348
+Wesen des lebens:
+  references:
+    GA 29/30:
+    - start: 343
 Wie wenn am Feiertage...:
   author: Hölderlin, Friedrich
   references:
@@ -3744,6 +3798,12 @@ Zeug:
     - end: 314
       start: 312
     - start: 316
+    - end: 325
+      start: 319
+    - end: 333
+      start: 331
+    - start: 334
+      suffix: f
 Ziegler, Leopold:
   metadata:
     gnd: '118636782'
@@ -3956,10 +4016,9 @@ existieren:
 formale Anzeige:
   references:
     GA 29/30:
-    - end: 431
+    - end: 432
       start: 421
     - start: 441
-    - start: 432
     - start: 435
 ganz Andere:
   references:
@@ -4199,21 +4258,26 @@ von Uexküll, Jakob Johann:
     - start: 284
     - start: 315
   type: p
+von Uexküll, Johann Jakob:
+  references:
+    GA 29/30:
+    - start: 327
+  type: p
 vulgäre Verstand:
   references:
     GA 29/30:
     - end: 428
       start: 426
     - start: 422
-    - end: 433
+    - end: 434
       start: 430
-    - start: 434
     - start: 258
       suffix: f
     - start: 276
     - start: 264
     - start: 266
       suffix: f
+    - start: 338
   related:
   - Alltäglichkeit
 wesentliche Möglichkeit des Seins:
@@ -4439,20 +4503,14 @@ wesentliche Möglichkeit des Seins:
     - start: 310
       suffix: f
     GA 29/30:
-    - start: 441
     - end: 420
       start: 418
-    - end: 440
-      start: 438
     - end: 467
-      start: 442
-    - end: 487
-      start: 484
+      start: 438
     - end: 491
-      start: 487
-    - end: 41
+      start: 484
+    - end: 42
       start: 40
-    - start: 42
     - start: 44
     GA 63:
     - start: 21
@@ -4479,10 +4537,8 @@ wesentliche Möglichkeit des Seins:
   parent: λόγος
   references:
     GA 29/30:
-    - end: 452
-      start: 448
     - end: 454
-      start: 452
+      start: 448
     - start: 487
     - start: 489
 μεταβολή:
@@ -4725,16 +4781,8 @@ wesentliche Möglichkeit des Seins:
     - end: 25
       start: 23
     GA 29/30:
-    - start: 38
-      suffix: ff
-    - end: 41
-      start: 38
-    - end: 48
-      start: 46
-    - end: 45
-      start: 42
     - end: 52
-      start: 48
+      start: 38
     HH:
     - start: 145
     SvG:
