--- a/index/works.yml
+++ b/index/works.yml
@@ -208,10 +208,12 @@ SZ:
   id: SZ
   issued:
     date-parts:
-    - - 1972
-  language: german
+    - - 1976
+  language: de-DE
   publisher: Max Niemeyer Verlag
   publisher-place: Tübingen
+  original-date:
+    - year: 1927
   title: Sein und Zeit
   type: book
 VA:
